--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Easy Hiring</string>
+    <string name="dialog_text">"Are you sure you want to change the status?</string>
 </resources>
